--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jeroennoten/laravel-adminlte": "^3.13",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.16",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "silviolleite/laravelpwa": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
